@@ -72,6 +72,7 @@ Methods
    resetaA <orbitresetaa.rst>
    rperi <orbitrperi.rst>
    setphi <orbitsetphi.rst>
+   time <orbittime.rst>
    toLinear <orbittolinear.rst>
    toPlanar <orbittoplanar.rst>
    Tp <orbittp.rst>
