@@ -1,0 +1,4 @@
+galpy.orbit.Orbit.time
+============================
+
+.. automethod:: galpy.orbit.Orbit.time
